Add links to CSS and JavaScript files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
+    <link rel="stylesheet" href="main.css">
 
     <title> </title>
 
@@ -20,4 +21,9 @@
 
     <footer>
     </footer>
+
+    <!-- JavaScript -->
+    <script src="main.js"></script>
+
   </body>
+</html>
