--- a/index.html
+++ b/index.html
@@ -14,16 +14,29 @@
 
   <body>
     <header>
+      <h1>Box Challenge</h1>
     </header>
 
     <main>
+      <div>
+        <h2>Test your luck. Choose a box. Win a prize.</h2>
+      </div>
+      <div>
+        <p>1</p>
+      </div>
+      <div>
+        <p>2</p>
+      </div>
+      <div>
+        <p>3</p>
+      </div>
     </main>
 
     <footer>
     </footer>
 
     <!-- JavaScript -->
-    <script src="main.js"></script>
+    <!-- script src="main.js"></script -->
 
   </body>
 </html>
