--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
 
-    <title> </title>
+    <title>m5-hw5-torres-nehemiah</title>
 
   </head>
 
@@ -17,19 +17,20 @@
       <h1>Box Challenge</h1>
     </header>
 
+    <div>
+      <h2>Test your luck. Choose a box. Win a prize.</h2>
+    </div>
+
     <main>
-      <div>
-        <h2>Test your luck. Choose a box. Win a prize.</h2>
-      </div>
-      <div>
+      <article>
         <p>1</p>
-      </div>
-      <div>
+      </article>
+      <article>
         <p>2</p>
-      </div>
-      <div>
+      </article>
+      <article>
         <p>3</p>
-      </div>
+      </article>
     </main>
 
     <footer>
