--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
     <main>
       <article>
-        <div>
+        <div class="box-1">
           <p>1</p>
         </div>
       </article>
       <article>
-        <div>
+        <div class="box-2">
           <p>2</p>
         </div>
       </article>
       <article>
-        <div>
+        <div class="box-3">
           <p>3</p>
         </div>
       </article>
