--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
     <main>
       <article>
-        <div class="box-1">
+        <div id="box-1" class="box">
           <p>1</p>
         </div>
       </article>
       <article>
-        <div class="box-2">
+        <div id="box-2" class="box">
           <p>2</p>
         </div>
       </article>
       <article>
-        <div class="box-3">
+        <div id="box-3" class="box">
           <p>3</p>
         </div>
       </article>
@@ -41,7 +41,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <!-- script src="main.js"></script -->
+    <script src="main.js"></script>
 
   </body>
 </html>
