Add color change on mouse activity for all boxes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <h2>Test your luck. Choose a box. Win a prize.</h2>
 
-    <main>
+    <main id="boxes">
       <article>
         <div id="box-1" class="box">
           <p>1</p>
